<?xml version="1.0"?>
<package>
	<name>robot1_2dnav</name>
	<version>1.0.0</version>
	<description>The robot1_2dnav package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag --> 
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="rahul@ntuentrepreneur.org">rahul</maintainer>


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>gazebo_ros</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>gazebo_ros</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>

</package>
