<?xml version="1.0"?>
<package>
	<name>robot1_description</name>
	<version>0.0.0</version>
	<description>The ros-navigation-tuts package</description>

	<maintainer email="rahul010@ntuenreprenuer.org">Rahul</maintainer>


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>robot_state_publisher</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>nav_msgs</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>nav_msgs</run_depend>

</package>
