<?xml version="1.0"?>
<package>
	<name>robot1_gazebo</name>
	<version>0.0.0</version>
	<description>The robot1_gazebo package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag --> 
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="rahul010@ntuentrepreneur.org">Rahul</maintainer>

	<license>TODO</license>	

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>

</package>
